# SchoolTimetableApp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5a9971c  Main.qml  main.cpp
modules/DBModule/: CMakeLists.txt
modules/DBModule/src/: containers.cpp  containers.h  databasemanager.cpp  databasemanager.h  functiontemplates.cpp  functiontemplates.h
modules/DataEntry/: CMakeLists.txt  ClassGroupView.qml  ClassroomView.qml  ProfileView.qml  SubjectView.qml  TeacherView.qml
modules/DataEntry/src/: classgroup.cpp  classgroup.h  classroom.cpp  classroom.h  profile.cpp  profile.h  subgroup.cpp  subgroup.h  subject.cpp  subject.h  teacher.cpp  teacher.h
modules/Timetable/: CMakeLists.txt  MainView.qml  TimetableView.qml
modules/Timetable/src/: gene.cpp  gene.h  geneticalgorithm.cpp  geneticalgorithm.h  individual.cpp  individual.h  tempbruteforcealgo.cpp  tempbruteforcealgo.h  timetable.cpp  timetable.h
modules/UIComponents/: AddButton.qml  AddWindowClassGroup.qml  AddWindowClassroom.qml  AddWindowProfile.qml  AddWindowSubject.qml  AddWindowTeacher.qml  AddWindowTimetable.qml  CMakeLists.txt  CustomHeaderLayout.qml  CustomMenuBar.qml  DialogAvailability.qml  PlanStackLayout.qml  PopupFillAll.qml
